--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -4,15 +4,44 @@
     	<meta charset="utf-8">
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
-
-		<title>Blank Template</title>
+		<title>Relaxr</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 
 	</head>
+	<header id="header">
+		<h1 id="logo">Relaxr</h1>
+		<h3 id="headerMessage">Get piece of mind with a single tap</h3>
+		<button id="button"><a href="TBA">Get it Now</a></button>
+	</header>
+
 	<body>
-		<h1>Blank Template</h1>
+		<div id="benifits">
+			<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+			<ul id="list">
+				<li>Schedule meetings for you</li>
+				<li>Excel automation to complete your work for you</li>
+				<li>Responds to emails on your behalf</li>
+				<li>Does all your work for you with our revolutionary Ai technology</li>
+			</ul>
+		</div>
+		<div id="review">
+			<p>"Relaxr changed my life. I've been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work."</p>
+			<p>- Amanda, Intuit</p>
+		</div>
+		<div id="signUp">
+			<button id="signUp">Sign Up Now!</button>
+		</div>
 	</body>
+
+	<footer id="footer">
+		<h3>Relaxr</h3>
+		<nav id="socialMedia">
+			<a href="https:/twitter.com">twitter logo</a>
+			<a href="https://facebook.com">facebook logo</a>
+		</nav>
+		<h5>Copyright 2015. Relaxr.</h5>
+	</footer>
 </html>
