--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -1,18 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="Your description goes here">
+    <meta name="keywords" content="one, two, three">
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
+    <title>Relaxr</title>
 
-	</head>
-	<body>
-		<h1>Blank Template</h1>
-	</body>
+    <!-- external CSS link -->
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+    <div class="head">
+        <header>
+            <h1 id="headh1">Relaxr</h1>
+        </header>
+        <div class="container">
+            <h2 id="headh2">Get piece of mind with a single tap</h2>
+            <button id="headb">Get it Now</button>
+        </div>
+    </div>
+
+    <div class="cont">
+        <h2>Benefits</h2>
+        <p> The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.
+        </p>
+        <ul>
+            <li>Schedule meetings for you</li>
+            <li>Excel automation to complete your work for you</li>
+            <li>Responds to emails on your behalf</li>
+            <li>Does all your work for you with our revolutionary AI technology</li>
+        </ul>
+    </div>
+
+    <div class="cont3">
+        <div class="lastsec">
+            <p>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”
+                  <strong><br>- Amanda, Intuit </strong></p>
+        </div>
+        <div class="lastsec2">
+            <button>Sign Up Now!</button>
+        </div>
+    </div>
+
+</body>
+
+<footer>
+    <h2>Relaxr</h2>
+    <div>
+    <img src="images/twitter.png" alt="">
+    <img src="images/facebook.png" alt="">
+</div>
+    <h3>Copyright 2015. Relaxr.</h3>
+</footer>
+
 </html>
