--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -8,11 +8,49 @@
 		<title>Blank Template</title>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/reset.css">
+		<!-- <link rel="stylesheet" href="css/reset.css"> -->
 		<link rel="stylesheet" href="css/style.css">
 
 	</head>
+	
+	<header>
+			<h1>Relaxr</h1> 
+			<h2> Get piece of mind with a single tap</h2>
+			<div>
+					<h2 class="get">Get it Now</h2>
+			</div>
+			
+		</header>
+
 	<body>
-		<h1>Blank Template</h1>
+		
+			
+		<p class="one">Benefits</p>
+		<h3>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be. </h3>
+		<ul>
+			<li> Schedule meetings for you</li>
+			<li> Excel automation to complete your work for you</li>
+			<li>Responds to emails on your behalf </li>
+			<li> Does all your work for you with our revolutionary AI technology</li>
+		</ul>
+
+
+	<div class="tow">
+		<p>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”</p>
+		<h4>- Amanda, Intuit "</h4>
+	</div>
+
+		<div class="three">Sign Up Now!</div>
+
 	</body>
+
+	<footer>
+		<h5>Relaxer</h5>
+			<div class="icon">
+					<img src="images/facebook.png">
+					<img src="images/twitter.png">
+				</div>
+		<p> Copyright 2015. Relaxr. </p>
+	</footer>
+
 </html>
