--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -5,14 +5,44 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
-
+		<title>Relaxr</title>
 		<!-- external CSS link -->
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
-
 	</head>
 	<body>
-		<h1>Blank Template</h1>
+		<header>
+			<h1>Relaxr</h1>
+			<p class="header-p">Get piece of mind with a single tap</p>
+			<a class=" yellow-button"href="#">Get it Now</a>
+		</header>
+		<div class="main-one">
+			<h2>Benefits</h2>
+			<p class="benefits-p">The perfect personal assistant. Relaxr does your job for you so you can enjoy life
+				 as it is meant to be.</p>
+			<ul>
+				<li>Schedule meetings for you</li>
+				<li>Excel automation to complete your work for you</li>
+				<li>Responds to emails on your behalf</li>
+				<li>Does all your work for you with our revolutionary AI technology</li>
+			</ul>
+		</div>
+		<div class="main-two">
+			<p class="main-two-p">“Relaxr changed my life. I’ve been able to travel the world,
+				spend limited time working and my boss keeps thanking me for crushing work.”</p>
+				<p class="writer">- Amanda, Intuit</p>
+		</div>
+		<section>
+			<a class=" gray-button"href="#">Sign Up Now!</a>
+		</section>
+		<footer>
+			<h3>Relaxr</h3>
+			<ul class="logos">
+				<a class="twitter"href="#"> <img src="images/twitter.png" alt="Twitter logo">  </a>
+				<a class="facebook"href="#"><img src="images/facebook.png" alt="Facebook logo"> </a>
+			</ul>
+			<p class="bottom-p">Copyright 2015. Relaxr</p>
+		</footer>
 	</body>
 </html>
