--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -40,8 +40,9 @@
 		<h4>- Amanda, Intuit "</h4>
 	</div>
 
-		<div class="three">Sign Up Now!</div>
-
+	<div class="paa">
+		<button>Sign Up Now!</button>
+	</div>
 	</body>
 
 	<footer>
