--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -8,11 +8,47 @@
 		<title>Blank Template</title>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="./css/reset.css">
+		<link rel="stylesheet" href="./css/style.css">
 
 	</head>
 	<body>
-		<h1>Blank Template</h1>
+		<header>
+			<div class="header">
+				<h1>Relaxr</h1>
+				<h2>Get piece of mind with a single tap</h2>
+				<h3 class="border">Get it Now </h3>
+			</div>
+		</header>
+	<main>
+		<h1 class="main">Benefits</h1>
+		<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.
+			</p>
+			<ul>
+				<li>Schedule meetings for you</li>
+				<li>Excel automation to complete your work for you</li>
+				<li>Responds to emails on your behalf</li>
+				<li>Does all your work for you with our revolutionary AI technology</li>
+			</ul>
+
+			<div class="testim">
+			<p>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”</p>
+			<br>
+			<p>- Amanda, Intuit</p>
+			</div>
+			<div class="sine">
+			<p class="sineup">Sign Up Now!</p>
+		</div>
+	</main>
+
+	<footer>
+			<h5>Relaxr</h5>
+			<div class="center">
+			<img src="images/twitter.png" alt="twitter">
+			<img src="images/facebook.png" alt="facebook">
+			</div>
+			<div class="copy">Copyright 2015. Relaxr</div>
+		</footer>
 	</body>
+
 </html>
