--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -12,7 +12,37 @@
 		<link rel="stylesheet" href="css/style.css">
 
 	</head>
+	<header>
+		<h1>Relaxer</h1>
+		<h2> Get piece of mind with a single tap </h2>
+		<div>
+<h2 class="buttom"> Git it now </h2>
+		</div> 
+	</header>
 	<body>
-		<h1>Blank Template</h1>
+		<h1 class="special">Benefits</h1>
+		<h3>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</h3>
+		<ul>
+			<li>Schedule meetings for you</li>
+			<li>Excel automation to complete your work for you</li>
+			<li>Responds to emails on your behalf</li>
+			<li>Does all your work for you with our revolutionary AI technology</li>
+		</ul>
+		<div class="quote">
+			<p>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”</p>
+			<h4> - Amanda, Intuit </h4>
+		</div> 
+		<div class="signup">
+			<h2 class="buttom2">Sign Up Now!</h2>
+		</div>
+
 	</body>
+	<footer>
+		<h5>Relaxr</h5>
+		<div class="center">
+		<img src="images/facebook.png" alt="facebook">
+		<img src="images/twitter.png" alt="twitter">
+		</div>
+		<p>Copyright 2015. Relaxr</p>
+	</footer>
 </html>
