--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -13,6 +13,42 @@
 
 	</head>
 	<body>
-		<h1>Blank Template</h1>
+		<header>
+			<h1>Relaxr</h1>
+			<h2>Get piece of mind with a single tap</h2>
+			<div>
+			<p class="button">Get it now</p>
+			</div>
+			</header>
+			
+			
+			<div>
+		    <h3 id="unique">Benefits</h3>
+			<h3>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</h3>
+			<ul>
+			<li>Schedule meetings for you.</li>
+			<li>Excel automation to complete your work for you.</li>
+			<li>Responds to emails on your behalf.</li>
+			<li>Does all your work for you with our revolutionary AI technology.</li>
+			</ul> </div>
+
+			<div class="quote">
+			<p id="quote">“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”</p>
+			<p id="quote1"> - Amanda, Intuit </p>
+			</div>
+			
+			<div class="signup">
+			<p class="button1">Sign Up Now!</p>
+			</div>
+			
+			<footer>
+			<h5>Relaxr</h5>
+			
+			<img src="images/twitter.png" alt="twitter">
+			
+			<img src="images/facebook.png" alt="facebook">
+			
+			<p>Copyright 2015. Relaxr</p>
+			</footer>
 	</body>
 </html>
