--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -8,11 +8,66 @@
 		<title>Blank Template</title>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/reset.css">
+
 		<link rel="stylesheet" href="css/style.css">
 
 	</head>
 	<body>
-		<h1>Blank Template</h1>
+			<body>
+
+					​
+					<div class="container"> 
+				​
+					<div class="item Header">
+
+							<img src="images/relaxr_landing.jpg" alt="relax">
+		<h1>Get piece of mind with a single tap</h1></div>
+		
+		<div class="item button">
+	<button type="button">Get it Now!</button></div>
+
+	<div class="item subhead">	
+	<h3>benefits</h3></div>
+
+	<div class="item bargraph">
+		<p>The perfect personal assistant. Relaxr
+			 does your job for you so you can enjoy life as it is meant to be.</p> </div>
+			
+		
+		<div class="item list">
+		<ul>
+				<li> meetings for you</li> 
+				<li> Excel automation to complete your work for you</li> 
+				<li> Responds to emails on your behalf</li> 
+				<li>Does all your work for you with our revolutionary AI technology</li> 
+			</ul></div>
+
+			<div class="item end">
+				<p>"Relaxr changed my life. I’ve been able to travel the world,
+					 spend limited time working and my boss keeps thanking me 
+					 for crushing work."
+						- Amanda, Intuit </p>
+			</div>
+			
+					<div class="item buttn">
+					<button type="button">Sign up!</button>
+			</div>
+
+			<div class="item closing">
+			Relaxr </div>
+
+			</div>
+
+			<img src="images/facebook.png" alt="facebook">
+			<img src="images/twitter.png" alt="twitter">
+
+			<footer>
+					<p>opyright 2015. Relaxr.</p>
+				
+				  </footer>
 	</body>
 </html>
+
+
+
+
