add-flex in each box

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -5,15 +5,57 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+		<title>Home</title>
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
+		external CSS link
+		<!-- <link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/style.css"> -->
 
 	</head>
 	<body>
-		<header></header>
-		<h1>Relaxv</h1>
+		<!-- <header>
+			<div class="container">
+				<h1>Relaxv</h1>
+				<h2> Get piece of maind with asingle tap</h2>
+				<button class="button">Get it Now</button>
+			</div>
+		</header>
+
+		<section class="benefit">
+			<div class="container">
+				<h1> Benefits</h1>
+				<p> The perfect personal assist. Relaxr does your job for you so you can enjoy life as it is meant  to be</p>
+				
+						<li>schedule meeting for you </li>
+						<li>Excel automation to complete your work for you </li>
+						<li>Responds to email on your behalf </li>
+						<li>schedule meeting for you </li>
+						<li>Does all your work for you with our revolutionary AI technology </li>
+			</div>
+		</section>
+
+		<section class="conculsion">
+			<div class="container">
+				<p>"Relaxr changed my life. I've been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work."</p>
+				<h1>A manda, Intuit</h1>
+			</div>
+		</section>
+
+		<section class="singup">
+			<div class="container">
+					<button class="button">Sing Up Now!</button>
+			</div>
+		</section>
+
+		<footer>
+			<div class="container">
+				<h1>Relaxr</h1>
+				<img src="/Users/mesfernasser/sei/homeworks/hw-w02d02-html-css/starter_code/images/twitter.png" alt="twitter">
+				<img src="/Users/mesfernasser/sei/homeworks/hw-w02d02-html-css/starter_code/images/facebook.png" alt="facebook">
+				<p>Copyright 2015. Relaxr</p>
+			</div>
+		</footer> -->
+
+		
 	</body>
 </html>
