--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="description" content="Relaxr Page">
+	<meta name="keywords" content="Relaxt, schedule meetings, AI, emails">
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
+	<title>Relaxr</title>
 
-	</head>
-	<body>
-		<h1>Blank Template</h1>
-	</body>
+	<!-- external CSS link -->
+	<!-- <link rel="stylesheet" href="css/reset.css"> -->
+	<link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+	<div class="main">
+		<header>
+			<h1>Relaxr</h1>
+			<div class="content">
+				<h2 class= "contentTitile">Get piece of mind with a single tap</h2>
+				<button>Get it Now</button>
+			</div>
+		</header>
+		<div class="contentContainer">
+			<h3>Benefits</h3>
+			<p>The perfect personal assistant. 
+				Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+				<ul class = "items">
+					<li>Schedule meetings for you</li>
+					<li>Excel automation to complete your work for you</li>
+					<li>Responds to emails on your behalf</li>
+					<li>Does all your work for you with our revolutionary AI technology</li>
+				</ul>
+		</div>
+		<footer>
+			<p>“Relaxr changed my life. I’ve been able to travel the world, 
+				spend limited time working and my boss keeps thanking me for crushing work.”</p>
+			<h5>- Amanda, Intuit </h5>
+			<button>Sign Up Now!</button>
+			<h2>Relaxr</h2>
+			<h6>Copyright 2015. Relaxr.</h6>
+		</footer>
+
+</body>
+
 </html>
