--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -5,7 +5,7 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+		<title>Relaxr</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
@@ -13,6 +13,41 @@
 
 	</head>
 	<body>
-		<h1>Blank Template</h1>
+		<header class="firstContainer">
+		<h1>Relaxr</h1>
+		<div class="empty"></div>
+		<p class="firstP">Get piece of mind with a single tap</p>
+		<div class="empty"></div>
+		<button>Get It Now</button>
+		</header>
+	<div class="secondContainer">
+		<div class="empty"></div>
+		<h2 class="subject">Benefits</h2>
+		<p class="subjectP">The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+		<div class="empty"></div>
+		<ul>
+			<li>Schedule meetings for you</li>
+			<li>Excel automation to complete your work for you</li>
+			<li>Responds to emails on your behalf</li>
+			<li>Does all your work for you with our revolutionary AI technology</li>
+			<div class="empty"></div>
+		</ul>
+	</div>
+	<footer class="thirdContainer">
+		<div class="empty"></div>
+		<p class="quote">"Relaxr changed my life. I've been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work"</p>
+		<p class="refrence">- Amanda, intuit</p>
+		<div class="empty"></div>
+		<div class="buttonBackground">
+			<button class="signUp">Sign Up Now!</button>
+		</div>
+		<div class="empty"></div>
+		<p id="company">Relaxr</p>
+		<div class="communication">
+			<a href="twitter.com"><img src="css/images/twitter.png" alt="twitter"></a>
+			<a href="facebook.com"><img src="css/images/facebook.png" alt="facebook"></a>
+		</div>
+		<p class="Copyright">Copyright 2015. Relaxr.</p>
+	</footer>
 	</body>
 </html>
