--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -13,6 +13,46 @@
 
 	</head>
 	<body>
-		<h1>Blank Template</h1>
+		<div class="hd">
+			<header>Relaxr</header>
+			<p id="getPiece">Get piece of mind with a single tap</p>
+			<h2 id="getNow">Get it Now</h2>
+		</div>
+
+
+		<div class="benefitslists">
+			<div class="benefits">
+				<h1>Benefits</h1>
+			</div>
+			
+			<div class="para">
+				<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+			</div>
+
+			<div class="lis">
+				<ul>
+					<li>Schedule meetings for you</li>
+					<li>Excel automation to complete your work for you</li>
+					<li>Responds to emails on your behalf</li>
+					<li>Does all your work for you with our revolutionary AI technology</li>
+				</ul>
+			</div>
+		</div>
+		<div class="qoute">
+			<p>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”</p>
+			<p id="name"> - Amanda, Intuit</p>
+
+			
+		</div>
+
+		<div class="signup">
+			<h2>Sign Up Now!</h2>
+		</div>
+
 	</body>
+
+	<footer>
+		<h1 id="relaxer">Relaxr</h1>
+		<h6>Copyright 2015. Relaxr.</h6>
+	</footer>
 </html>
