--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -1,18 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="Your description goes here">
+    <meta name="keywords" content="one, two, three">
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
+    <title>Blank Template</title>
 
-	</head>
-	<body>
-		<h1>Blank Template</h1>
-	</body>
+    <!-- external CSS link -->
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+
+    <div class="container">
+        <header>
+            <!-- The picture -->
+            <div class="pic">
+                <img src="images/header_bg.jpg" alt="">
+                <h1>RELAXAR</h1>
+                <p>Get piece of mind with a single tap</p>
+                <button class="btn">Git it Now</button>
+            </div>
+
+            <!-- The benefits -->
+            <div class="benefits">
+                <h1>Benefits</h1>
+                <p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+                <ul>
+                    <li>Schedule meetings for you</li>
+                    <li>Excel automation to complete your work for you</li>
+                    <li>Responds to emails on your behalf</li>
+                    <li>Does all your work for you with our revolutionary AI technology</li>
+                </ul>
+            </div>
+
+            <!-- The see image -->
+            <div class="see">
+                <img src="/images/testimonial_bg.jpg" alt="">
+                <p>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”</p>
+                <p>- Light Italic</p>
+            </div>
+
+            <!-- The wellow color -->
+            <div class="yellowLine">
+                <button id="btn2">Sign Up Now!</button>
+            </div>
+
+            <!-- The footer -->
+            <div class="footer">
+                <h1>RELAXAR</h1>
+                <ul id="listLogo">
+                    <li> <img src="/images/facebook.png" alt=""></li>
+                    <li><img src="/images/twitter.png" alt=""></li>
+                </ul>
+                <p>Copyright 2015. Relaxr.</p>
+            </div>
+
+        </header>
+
+
+    </div>
+
+</body>
+
 </html>
