--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -1,11 +1,12 @@
+ 
 <!DOCTYPE html>
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one, two, three">
+    	<meta name="description" content="The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.">
 
-		<title>Blank Template</title>
+		<title>Relaxr Landing Page</title>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600,800' rel='stylesheet' type='text/css'>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
@@ -13,6 +14,46 @@
 
 	</head>
 	<body>
-		<h1>Blank Template</h1>
+		<header>
+			<div class="container">
+				<h1 class="web_name">Relaxr</h1>
+				<h2>Get piece of mind with a single tap</h2>
+				<a class="button but_1" href="#">Get it Now</a>
+			</div>
+		</header>
+		
+		<div class="benefits">
+			<div class="container">
+				<h3>Benefits</h3>
+				<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+				<ul>
+					<li>Schedule meetings for you</li>
+					<li>Excel automation to complete your work for you</li>
+					<li>Responds to emails on your behalf</li>
+					<li>Does all your work for you with our revolutionary AI technology</li>
+				</ul>
+			</div>
+		</div>
+		<div class="text">
+			<div class="container quote ">
+				<p>"Relaxr changed my life. I’ve been able to travel the world,
+					spend limited time working and my boss keeps thanking me 
+					for crushing work."
+					   - Amanda, Intuit </p>
+			</div>
+		</div>
+		<aside>
+			<a class="button but_2" href="#">Sign Up Now!</a>
+		</aside>
+		<footer>
+			<h4 class="web_name">Relaxr</h4>
+
+				
+				<a class="images" href="#"><img src="images/twitter.png" alt="Twitter logo"></a>
+				<a href="#"><img src="images/facebook.png" alt="Facebook logo"></a>
+			
+
+			<p class="copyright">Copyright 2015. Relaxr.</p>
+		</footer>
 	</body>
 </html>
