--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -1,18 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="description" content="Your description goes here">
+	<meta name="keywords" content="one, two, three">
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
+	<title>Relaxr</title>
 
-	</head>
-	<body>
-		<h1>Blank Template</h1>
-	</body>
+	<!-- external CSS link -->
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+	<header>
+		<h1>Relaxer</h1>
+		<h2> Get piece of mind with a single tap </h2>
+		<div>
+			<a class="btn" href="#"> Get it now </a>
+		</div>
+	</header>
+	<main>
+		<section class="benefits">
+			<h2>Benefits</h2>
+			<h3>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.
+			</h3>
+			<ul>
+				<li>Schedule meetings for you</li>
+				<li>Excel automation to complete your work for you</li>
+				<li>Responds to emails on your behalf</li>
+				<li>Does all your work for you with our revolutionary AI technology</li>
+			</ul>
+		</section>
+		<section class="feedBack">
+			<blockquote>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and
+				my
+				boss keeps
+				thanking me for crushing work.”</blockquote>
+			<span> - Amanda, Intuit </span>
+			<div>
+				<a href="#" class="btn">Sign Up Now!</a>
+			</div>
+		</section>
+	</main>
+	<footer>
+		<h1>Relaxr</h1>
+		<div>
+			<img src="../starter_code/images/facebook.png" alt="facebook">
+			<img src="../starter_code/images/twitter.png" alt="twitter">
+		</div>
+		<p>Copyright 2015. Relaxr</p>
+	</footer>
+</body>
 </html>
