--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -5,7 +5,7 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+		<title></title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
@@ -13,6 +13,33 @@
 
 	</head>
 	<body>
-		<h1>Blank Template</h1>
+		<header> 
+			<div class="header"> 
+	 
+		<h1>Relaxr</h1>
+		<p class="one"> Get piece of mind with a single tap </p> 
+		<p class="two">  Get it Now </p> 
+
+	        </div> 
+		</header> 
+		            <div class="benefit"> 
+		            <p class="three"> Benefits </p>
+		            <p class="four"> The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+		      <ul> 
+                    <li> Schedule meetings for you </li>
+		        	<li> Excel automation to complete your work for you </li>
+		        	<li> Responds to emails on your behalf </li>
+		        	<li> Does all your work for you with our revolutionary AI technology </li>
+			  </ul>
+			       </div>
+
+		<p class="five"> “Relaxr changed my life. I’ve been able to travel the world, 
+			spend limited time working and my boss keeps thanking me for crushing work.”</p>
+			<p class="sex"> - Amanda, Intuit </p>
+
+			<p class="seven"> Sign Up Now! </p>
+			<p class="eight"> Relaxr </p> 
+			<p class="ten"> Copyright 2015. Relaxr. </p>
 	</body>
+
 </html>
