--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -5,14 +5,58 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+		<title>Relaxer</title>
 
-		<!-- external CSS link -->
+		
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 
 	</head>
 	<body>
-		<h1>Blank Template</h1>
+		<header>
+		<div class="head">	
+		<div class="head1"><h1>Relaxer</h1></div>
+		<div class="head2"><h2>Get piece of mind with a single tap</h2></div>
+		<div class="head3"><h3>Get it Now</h3></div>
+		</div>
+	</header>
+	<div>
+	<main>
+		<div class="benefit">
+		<h2>Benefits</h2>
+		<div class="perfect">
+		<p>
+				"The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be." 
+				
+		</p>
+		<ul>
+				<li>• Schedule meetings for you</li>
+				<li>• Excel automation to complete your work for you</li>
+				<li>• Responds to emails on your behalf</li>
+				<li>• Does all your work for you with our revolutionary AI technology"</li> 
+		</ul>
+	</div>
+		</div>
+<div class="main">
+	
+<p>Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”" 
+		</p>
+		<h2> - Amanda, Intuit - </h2>
+
+</div>
+<div class="sign">
+	<h3>Sign Up Now !</h3>
+</div>
+</div>
+	</main>
+	<footer>
+		<div class="content">
+			<div><h2>Relax</h2></div>
+			<div><img src="images/twitter.png" alt="twitter">
+		    <img src="images/facebook.png" alt="facebook"></div>
+
+			<div><p>Copyright 2015,Relaxer</p></div>
+		</div>
+	</footer>
 	</body>
 </html>
