--- a/relaxr/relaxr.html
+++ b/relaxr/relaxr.html
@@ -4,8 +4,8 @@
     	<meta name="description" content="Your description goes here">
         <meta name="keywords" content="one, two, three">
         <!-- external CSS link -->
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style.css">
+    
+        <link rel="stylesheet" href="style.css">
         <title>Relaxr</title>
 
         
