not the finalconst newParagraph = document.createElement(p); solution, had issues with GitHub services when cloning

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -1,18 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+	<head>
+		<meta charset="utf-8">
+		<meta name="description" content="Relaxr. A hot, new NY Tech Startup">
+		<meta name="keywords" content="one, two, three">
+
+		<title>Relaxr. A hot, new NY Tech Startup</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 
 	</head>
+
 	<body>
-		<h1>Blank Template</h1>
+		<div class="container"> <!-- Acts like a table -->
+			<div class="row"> <!-- Acts like table's row -->
+				<div class="column"> <!-- Acts like table's column -->
+
+					<header>
+							<div class="white-txt center-txt pdng">
+								<h1>Relaxr</h1> <!-- Extra bold, 24px -->
+								<p class="mrgn">Get piece of mind with a single tap</p> <!-- Semibold, 24px -->
+								<a href="#" class="btn yellow-bg blue-txt">Get it Now</a> <!-- Extra bold, 14px. 5px border radius -->
+							</div>
+					</header>
+
+					<section id="benefits">
+						<div class="white-bg blue-txt pdng">
+							<h2>Benefits</h2> <!-- Semibold, 20px -->
+							<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant
+								to be.</p> <!-- Light, 13px -->
+							<ul>
+								<li>Schedule meetings for you</li>
+								<li>Excel automation to complete your work for you</li>
+								<li>Responds to emails on your behalf</li>
+								<li>Does all your work for you with our revolutionary AI technology"</li>
+							</ul> <!-- Light, 13px -->
+						</div>
+					</section>
+
+					<section id="testimonial">
+						<div class="white-txt center-txt pdng">
+							<figure>
+								<blockquote>“Relaxr changed my life. I’ve been able to travel the world, spend limited time
+									working
+									and my boss keeps thanking me for crushing work.”</blockquote> <!-- Light Italic, 18px -->
+								<figcaption>Amanda, Intuit</figcaption> <!-- semibold, 18px -->
+							</figure>
+						</div>
+					</section>
+
+					<section id="sign-up">
+						<div class="yellow-bg center-txt pdng">
+							<a href="#" class="btn blue-bg white-txt">Sign Up Now!</a> <!-- extra bold, 12px, 5px border radius -->
+						</div>
+					</section>
+
+					<footer>
+						<div class="black-bg yellow-txt center-txt pdng">
+							<p>Relaxr</p> <!-- extra bold, 24px -->
+							<a href="#"><img src="images/twitter.png" alt="Twitter logo"></a>
+							<a href="#"><img src="images/facebook.png" alt="Facebook logo"></a>
+							<small class="white-txt">Copyright 2015. Relaxr.</small> <!-- 9px, semibold -->
+						</div>
+					</footer>
+
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
