--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -7,51 +7,58 @@
 	<meta name="keywords" content="one, two, three">
 
 	<title>Relaxr</title>
-
 	<!-- external CSS link -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
-
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<header>
-		<h1>Relaxer</h1>
-		<h2> Get piece of mind with a single tap </h2>
-		<div>
-			<a class="btn" href="#"> Get it now </a>
-		</div>
-	</header>
-	<main>
-		<section class="benefits">
-			<h2>Benefits</h2>
-			<h3>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.
-			</h3>
-			<ul>
-				<li>Schedule meetings for you</li>
-				<li>Excel automation to complete your work for you</li>
-				<li>Responds to emails on your behalf</li>
-				<li>Does all your work for you with our revolutionary AI technology</li>
-			</ul>
-		</section>
-		<section class="feedBack">
-			<blockquote>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and
-				my
-				boss keeps
-				thanking me for crushing work.”</blockquote>
-			<span> - Amanda, Intuit </span>
-			<div>
-				<a href="#" class="btn">Sign Up Now!</a>
+	<div class="content-Wrapper">
+		<header>
+			<h1>Relaxer</h1>
+			<div class="headerContent">
+				<h2> Get piece of mind with a single tap </h2>
+				<a class="btn getBtn" href="#"> Get it now </a>
 			</div>
-		</section>
-	</main>
-	<footer>
-		<h1>Relaxr</h1>
-		<div>
-			<img src="../starter_code/images/facebook.png" alt="facebook">
-			<img src="../starter_code/images/twitter.png" alt="twitter">
-		</div>
-		<p>Copyright 2015. Relaxr</p>
-	</footer>
+		</header>
+
+		<main>
+			<section class="benefits">
+				<h2>Benefits</h2>
+				<p>
+					The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to
+					be.
+				</p>
+
+				<ul>
+					<li>Schedule meetings for you</li>
+					<li>Excel automation to complete your work for you</li>
+					<li>Responds to emails on your behalf</li>
+					<li>Does all your work for you with our revolutionary AI technology</li>
+				</ul>
+			</section>
+
+			<section class="feedBack">
+				<blockquote>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and
+					my
+					boss keeps
+					thanking me for crushing work.”</blockquote>
+				<span> - Amanda, Intuit </span>
+			</section>
+			<div class="signUpDiv">
+				<a href="#" class="btn singUpBtn">Sign Up Now!</a>
+			</div>
+		</main>
+		<footer>
+			<h1 class="h1Footer">Relaxr</h1>
+			<div>
+				<img src="../starter_code/images/twitter.png" alt="twitter">
+				<img src="../starter_code/images/facebook.png" alt="facebook">
+			</div>
+			<p>Copyright 2015. Relaxr</p>
+		</footer>
+	</div>
 </body>
+
 </html>
