added my solution

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -19,51 +19,47 @@
 			<div class="row"> <!-- Acts like table's row -->
 				<div class="column"> <!-- Acts like table's column -->
 
-					<header>
-							<div class="white-txt center-txt pdng">
-								<h1>Relaxr</h1> <!-- Extra bold, 24px -->
-								<p class="mrgn">Get piece of mind with a single tap</p> <!-- Semibold, 24px -->
-								<a href="#" class="btn yellow-bg blue-txt">Get it Now</a> <!-- Extra bold, 14px. 5px border radius -->
-							</div>
+					<header class="white-txt">
+						<h1>Relaxr</h1> <!-- Extra bold, 24px -->
+						<div class="center-txt">
+							<p class="mrgn pdng">Get piece of mind with a single tap</p> <!-- Semibold, 24px -->
+							<a href="#" class="btn yellow-bg blue-txt mrgn">Get it Now</a> <!-- Extra bold, 14px. 5px border radius -->
+						</div>
 					</header>
 
-					<section id="benefits">
-						<div class="white-bg blue-txt pdng">
+					<section class="pdng white-bg blue-txt" id="benefits">
 							<h2>Benefits</h2> <!-- Semibold, 20px -->
-							<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant
+							<p class="mrgn">The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant
 								to be.</p> <!-- Light, 13px -->
-							<ul>
+							<ul class="mrgn">
 								<li>Schedule meetings for you</li>
 								<li>Excel automation to complete your work for you</li>
 								<li>Responds to emails on your behalf</li>
-								<li>Does all your work for you with our revolutionary AI technology"</li>
+								<li>Does all your work for you with our revolutionary AI technology</li>
 							</ul> <!-- Light, 13px -->
-						</div>
 					</section>
 
-					<section id="testimonial">
-						<div class="white-txt center-txt pdng">
-							<figure>
+					<section class="pdng white-txt" id="testimonial">
+							<figure class="center-txt">
 								<blockquote>“Relaxr changed my life. I’ve been able to travel the world, spend limited time
 									working
 									and my boss keeps thanking me for crushing work.”</blockquote> <!-- Light Italic, 18px -->
-								<figcaption>Amanda, Intuit</figcaption> <!-- semibold, 18px -->
+								<figcaption>- Amanda, Intuit</figcaption> <!-- semibold, 18px -->
 							</figure>
+					</section>
+
+					<section class="pdng yellow-bg" id="sign-up">
+						<div class="center-txt">
+							<a href="#" class="btn blue-bg white-txt mrgn">Sign Up Now!</a> <!-- extra bold, 12px, 5px border radius -->
 						</div>
 					</section>
 
-					<section id="sign-up">
-						<div class="yellow-bg center-txt pdng">
-							<a href="#" class="btn blue-bg white-txt">Sign Up Now!</a> <!-- extra bold, 12px, 5px border radius -->
-						</div>
-					</section>
-
-					<footer>
-						<div class="black-bg yellow-txt center-txt pdng">
-							<p>Relaxr</p> <!-- extra bold, 24px -->
-							<a href="#"><img src="images/twitter.png" alt="Twitter logo"></a>
-							<a href="#"><img src="images/facebook.png" alt="Facebook logo"></a>
-							<small class="white-txt">Copyright 2015. Relaxr.</small> <!-- 9px, semibold -->
+					<footer class="pdng black-bg yellow-txt">
+						<div class="center-txt">
+							<p class="mrgn">Relaxr</p> <!-- extra bold, 24px -->
+							<a href="#" class="mrgn"><img src="images/twitter.png" alt="Twitter logo"></a>
+							<a href="#" class="mrgn"><img src="images/facebook.png" alt="Facebook logo"></a>
+							<small class="mrgn white-txt">Copyright 2015. Relaxr.</small> <!-- 9px, semibold -->
 						</div>
 					</footer>
 
