--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -16,20 +16,30 @@
 
 <body>
 
-    <div class="container">
-        <header>
-            <!-- The picture -->
-            <div class="pic">
-                <img src="images/header_bg.jpg" alt="">
-                <h1>RELAXAR</h1>
-                <p>Get piece of mind with a single tap</p>
-                <button class="btn">Git it Now</button>
-            </div>
 
-            <!-- The benefits -->
-            <div class="benefits">
+    <div class="container">
+
+        <!-- First -->
+        <div class="top">
+            <div class="headerTop">
+                <h1 id="h1Top">RELAXAR</h1>
+                <br><br>
+            </div>
+            <div class="contentTop">
+                <p id="pTop">Get piece of mind with a single tap</p>
+                <button id="btnTop">Git it Now</button>
+            </div>
+        </div>
+
+        <!-- Second -->
+        <div class="benefits">
+            <div class="headerBenef">
                 <h1>Benefits</h1>
+                <br><br><br><br>
+            </div>
+            <div class="contentBenef">
                 <p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+                <br><br>
                 <ul>
                     <li>Schedule meetings for you</li>
                     <li>Excel automation to complete your work for you</li>
@@ -37,31 +47,27 @@
                     <li>Does all your work for you with our revolutionary AI technology</li>
                 </ul>
             </div>
+        </div>
 
-            <!-- The see image -->
-            <div class="see">
-                <img src="/images/testimonial_bg.jpg" alt="">
-                <p>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”</p>
-                <p>- Light Italic</p>
-            </div>
+        <div class="sea">
+            <br><br>
+            <p>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”</p>
+            <br>
+            <p>- Light Italic</p>
+        </div>
 
-            <!-- The wellow color -->
-            <div class="yellowLine">
-                <button id="btn2">Sign Up Now!</button>
-            </div>
+        <div class="yellowLine">
+            <button>Sign Up Now!</button>
+        </div>
 
-            <!-- The footer -->
-            <div class="footer">
-                <h1>RELAXAR</h1>
-                <ul id="listLogo">
-                    <li> <img src="/images/facebook.png" alt=""></li>
-                    <li><img src="/images/twitter.png" alt=""></li>
-                </ul>
-                <p>Copyright 2015. Relaxr.</p>
-            </div>
-
-        </header>
-
+        <div class="footer">
+            <h1>RELAXAR</h1>
+            <ul id="listLogo">
+                <li> <img src="/images/facebook.png" alt=""></li>
+                <li><img src="/images/twitter.png" alt=""></li>
+            </ul>
+            <p>Copyright 2015. Relaxr.</p>
+        </div>
 
     </div>
 
