--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -5,14 +5,59 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+		<title>Relaxr</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 
+       
 	</head>
 	<body>
-		<h1>Blank Template</h1>
+		
+		<header>
+		<h1 id = "title">Relaxr</h1>
+		<h2>Get piece of mind with a single tap</h2>
+		<button type ="button" class="butt">Get it now</button>
+
+	</header>
+		
+<div class = "second">
+		<h3>Benefits</h3>
+		<p id= p1>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+
+		<ul>
+			<li>Scedule meeetings for you</li>
+			<li>Excel automation to complete your work for you</li>
+			<li>Responds to emails on your behalf</li>
+			<li>Does all your work for you with our Al technology</li>
+		</ul>
+
+	</div>
+
+        <div class= "third">
+		<p id=p2> "Relaxr changed my life.i've been able to travel the word, spend limited time working and boss keeps thanking me for crushing work." </p>
+		<h4> -Amanda, Intuit </h4>
+	    </div>
+		
+		<div class= "fourth">
+		<button type="button" class="butt2">Sign Up Now!</button>
+	    </div>
+
+		<footer>
+		 
+			<h5>Relaxr</h5>
+			<img src="images/twitter.png">
+			<img src="images/facebook.png">
+
+
+
+			<p>Copyright 2015. Relaxr.</p>
+
+		</footer>
+
+	
+
+
 	</body>
 </html>
