--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -41,8 +41,6 @@
 		<div class="qoute">
 			<p>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”</p>
 			<p id="name"> - Amanda, Intuit</p>
-
-			
 		</div>
 
 		<div class="signup">
@@ -53,6 +51,8 @@
 
 	<footer>
 		<h1 id="relaxer">Relaxr</h1>
-		<h6>Copyright 2015. Relaxr.</h6>
+		<div id="copyright">
+			<h6>Copyright 2015. Relaxr.</h6>
+		</div>
 	</footer>
 </html>
