--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -7,12 +7,68 @@
 
 		<title>Blank Template</title>
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
+
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,800&display=swap" rel="stylesheet">
+	<!-- external CSS link -->
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="style.css">
+
+
+</head>
+
+<body>
+	<div class="header">
+	<div class="firstPage">
+			<h1>Relaxr</h1>
+			<h2>Get piece of zift with a single tap</h2>
+			<button>
+				<h4>Get it Now</h4>
+			</button>
+	</div>
+	</div>
+
+
+
+	<main>
+		<div class="bnft">
+			<h2>Benefits</h2>
+			<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.
+			</p>
+			<ul>
+				<li>Schedule meetings for you</li>
+				<li>Excel automation to complete your work for you</li>
+				<li>Responds to emails on your behalf</li>
+				<li>Does all your work for you with our revolutionary AI technology</li>
+			</ul>
+		</div>
+		<div class="test">
+		<div class="qoute">
+			<p>“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss
+					keeps thanking me for crushing work.”
+			</p>
+				<h2>- Amanda, Intuit</h2>
+		</div>
+		</div>
+
+
+		<div class="signingUp">
+		<button>
+				<h4>Sign Up Now!</h4>
+		</button>
+		</div>
+	</main>
+	<div class ="footer">
+		<h1>Relaxr</h1>
+	<div>
+			<img src="twitter.png" alt="twitter">
+			<img src='facebook.png' alt="facebook">
+	</div>
+		<p>Copyright 2015. Relaxr.</p>
+	</div>
+</body>
 
 	</head>
 	<body>
 		<h1>Blank Template</h1>
 	</body>
-</html>
+</html> 
