--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -13,6 +13,23 @@
 
 	</head>
 	<body>
-		<h1>Blank Template</h1>
+		<h1>Relaxr</h1>
+		<p>Get piece of mind with a single tap</p>
+		<button>Get it Now</button>
+		<h2>Benefits</h2>
+		<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+		<li>Schedule meetings for you</li>
+		<li>Excel automation to complete your work for you</li>
+		<li>Responds to emails on your behalf</li>
+		<li>Does all your work for you with our revolutionary AI technology</li>
+
+		<p>Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work</p>
+		<h2>Amanda, Intuit</h2>
+		<button>Sign Up Now</button>
+		<h1>Relaxr</h1>
+		<img src="./images/facebook.png" alt="facebook">
+		<img src="./images/twitter.png" alt="twitter">
+
+
 	</body>
 </html>
