--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -5,7 +5,7 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+		<title>Relaxr</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
@@ -29,6 +29,7 @@
 		<h1>Relaxr</h1>
 		<img src="./images/facebook.png" alt="facebook">
 		<img src="./images/twitter.png" alt="twitter">
+
 
 
 	</body>
