--- a/hw-w02d02-html-css/starter_code/index.html
+++ b/hw-w02d02-html-css/starter_code/index.html
@@ -20,9 +20,9 @@
 		</nav>
 	</header>
 	<body>
-		<div class="body">
+		<div class="body" id="list">
 			<h2>Benefits</h2>
-			<p class="list">The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.
+			<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.
 				<ul>
 					<li>
 						Schedule meetings for you
