--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -1,36 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one, two, three">
 
-		<title>Relaxr</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="description" content="Your description goes here">
+	<meta name="keywords" content="one, two, three">
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
+	<title>Relaxr</title>
 
-	</head>
-	<body>
-		<h1>Relaxr</h1>
-		<p>Get piece of mind with a single tap</p>
-		<button>Get it Now</button>
-		<h2>Benefits</h2>
-		<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
-		<li>Schedule meetings for you</li>
-		<li>Excel automation to complete your work for you</li>
-		<li>Responds to emails on your behalf</li>
-		<li>Does all your work for you with our revolutionary AI technology</li>
+	<!-- external CSS link -->
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
 
-		<p>Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work</p>
-		<h2>Amanda, Intuit</h2>
-		<button>Sign Up Now</button>
-		<h1>Relaxr</h1>
-		<img src="./images/facebook.png" alt="facebook">
-		<img src="./images/twitter.png" alt="twitter">
+</head>
 
+<body>
+<div id="header">
+	<header>
+		<h1 id="relaxerHeader">Relaxr</h1>
+		<p id="piece">Get piece of mind with a single tap</p>
+		<button id="now">Get it Now</button>
+	</header>
+</div>
+<div id="main">
+	<h2 id="benfits">Benefits</h2>
+	<p id="thePerfect">The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+	<li>Schedule meetings for you</li>
+	<li>Excel automation to complete your work for you</li>
+	<li>Responds to emails on your behalf</li>
+	<li>Does all your work for you with our revolutionary AI technology</li>
+</div>
 
+<div id="art">
+	<p id="relaxerChange">"Relaxr changed my life. I’ve been able <br> to travel the world, spend limited time <br> working and my boss keeps thanking <br>
+		me for crushing work"</p>
+	<h2 id="amanda">Amanda, Intuit</h2>
+</div>
+<div id="singBackground">
+	<button id="signUp">Sign Up Now</button>
+</div>	
+	<footer>
+		<h1 id="relaxerFooter">Relaxr</h1>
+		
+		<img id="twitter" src="./images/twitter.png" alt="twitter">
+		<img id="facebook" src="./images/facebook.png" alt="facebook">
+	
+		<p id="copyright">Copyright 2015. Relaxr.</p>
+	</footer>
 
-	</body>
+</body>
+
 </html>
